2006-03-06 Scott Dattalo <scott@dattalo.com>
	* doc/gpsim.lyx, doc/gpsim.pdf: Updated the documentation to
	reflect the deprecation of the X command
	
2006-03-06 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src_asm.cc: Moved the
	gtk text tag table to the source browser parent class. Added a
	SourceBuffer class to wrap the text buffers. With these changes,
	multiple source browsers will share the same text buffers.

2006-03-06 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_x.cc: The x command has been deprecated.
	
2006-03-05 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.h: The default Thevenin resistance for an IOPIN was
	too low. This caused an INPUT only pin to appear as though if it
	was driving! (Bug reported by Alex Holden).

2006-03-05 Borut Razem <borut.razem@siol.net>
	* configure.ac: removed GTK+ 1.x leftovers
	* plat/win32/gpsim.nsi: remove extras/graphic_lcd/* when uninstalling
	  gpsim, added extras/usart_con
	* extras/usart_con/AUTHORS, extras/usart_con/autogen.sh,
	  extras/usart_con/ChangeLog, extras/usart_con/configure.in,
	  extras/usart_con/COPYING, extras/usart_con/INSTALL,
	  extras/usart_con/Makefile.am, extras/usart_con/makefile.mingw,
	  extras/usart_con/module_manager.cc, extras/usart_con/NEWS,
	  extras/usart_con/README, extras/usart_con/usart_con.cc,
	  extras/usart_con/usart_con.h: receive-only usart module,
	  received characters are printed to the console

2006-03-04 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src.cc: See comment on
	2006-02-27. Removed the line numbers from the source
	browser. Changed the current PC and breakpoint indicator. Also,
	now clicking on a break indicator toggles a break point.
	
2006-03-04 Scott Dattalo <scott@dattalo.com>
	* src/modules.h, src/modules.cc, src/os_dependent.cc: Changed
	references from char * to const char * for error strings
	processing. (Alex Holden reports that on BSD dlerror returns const