@@ -1,4 +1,9 @@
 2006-03-06 Scott Dattalo <scott@dattalo.com>
+	* src/stimuli.cc: The stimulus command without any options now
+	shows more information. In particular, value stimuli (the ones
+	that allow you to specify an array of data) are now shown.
+	
+2006-03-06 Scott Dattalo <scott@dattalo.com>
 	* doc/gpsim.lyx, doc/gpsim.pdf: Updated the documentation to
 	reflect the deprecation of the X command
 	
